--- a/practica09/pom.xml
+++ b/practica09/pom.xml
@@ -38,6 +38,13 @@
     <version>1.7.21</version>
   </dependency>
 
+
+  <dependency>
+    <groupId>com.google.code.gson</groupId>
+    <artifactId>gson</artifactId>
+    <version>2.8.6</version>
+  </dependency>
+  
   </dependencies>
 
   <build>
